--- a/src/pages/blog/posts/new.mdx
+++ b/src/pages/blog/posts/new.mdx
@@ -1,44 +1,50 @@
-Building My First Blog with Astro: Early Thoughts & Next Steps
+---
+layout: '../../../layouts/Post.astro'
+title: Building My First Astro Website: A Journey into Modern Web Development
+description: Exploring Astro's speed and simplicity while learning content management and deployment workflows
+publishDate: June 1, 2025
+featuredImage: '/assets/images/blog/first-astro-website/featured.jpg'
+excerpt: 'Just launched a brand new website built with Astro and wanted to share my thoughts on this exciting web framework that prioritizes speed and simplicity over complex animations.'
+tags: 
+  - Astro
+  - Web Development
+  - Content Management
+  - Performance
+---
 
-Hey everybody! 👋
+# Building My First Astro Website: A Journey into Modern Web Development
 
-This is my very first post on a new website I’m building using the Astro web framework. I wanted to see what would happen if I simply created a post and shared some thoughts as I go. No polish—just real-time reflections.
+I just launched a brand new website built with Astro, and I wanted to share my thoughts on this exciting web framework that's been gaining so much traction lately.
 
-Why Astro?
+## First Impressions: Speed Above All
 
-Astro caught my attention because it’s blazingly fast, clean, and refreshingly simple. As someone whose business doesn’t depend on flashy animations or heavy interactivity, performance and ease of use matter much more to me. I don’t need bells and whistles—I need something reliable that loads quickly and lets me focus on the content.
+What immediately struck me about Astro is its incredible speed. As someone who values performance over flashy animations, this framework feels like it was built specifically for developers like me. The focus on delivering fast, clean websites aligns perfectly with my business philosophy – sometimes simple and effective beats complex and showy.
 
-Realization: I Need a CMS
+## The Content Management Challenge
 
-As I started drafting this post, it became clear that I’ll eventually want a lightweight CMS to manage things like:
-	•	Titles and metadata
-	•	SEO-friendly URLs
-	•	Post dates
-	•	Images and embeds
+One thing I'm still wrapping my head around is content management. Creating posts like this one requires handling metadata like titles, SEO slugs, publication dates, and image management. While I'm still learning the ropes with Astro's content handling, I'm optimistic about the possibilities.
 
-Right now, all of that would require me to hand-edit markdown or .astro files, which is fine for a few pages—but not scalable.
+My next step is exploring lightweight CMS solutions that can integrate with GitHub. The workflow I'm envisioning is beautifully simple:
 
-The Ideal Stack (for Me)
+1. Edit content through a user-friendly CMS interface
+2. Changes automatically update GitHub repository files  
+3. GitHub triggers deployment to Cloudflare Pages
+4. Live site updates instantly
 
-What I’m envisioning is a lightweight CMS that layers neatly on top of GitHub. Something that lets me:
-	1.	Write and edit posts in a simple UI
-	2.	Automatically commit those changes to my GitHub repo
-	3.	Trigger a redeploy via Cloudflare Pages, which I’m using for free hosting
+The best part? This entire pipeline can run completely free while maintaining enterprise-level performance and reliability.
 
-That stack—Astro + GitHub + CMS + Cloudflare—is super lightweight, fast, and doesn’t cost a thing. Which, honestly, is a bonus. But more importantly, it aligns with how I want to run my business: minimal, efficient, and focused.
+## Beyond Blogging: Landing Page Opportunities
 
-What’s Next?
+What really excites me about this setup is the potential for rapid landing page creation. With Astro's component-based architecture, I can quickly spin up new pages for different business needs. Combined with AI tools for content generation and design inspiration from existing sites, the possibilities for fast iteration are endless.
 
-I’m thinking of testing out a few CMS tools like:
-	•	Netlify CMS
-	•	Decap CMS
-	•	CloudCannon
-	•	Contentlayer (or possibly building something custom)
+This approach perfectly matches my business needs – prioritizing functionality and speed over elaborate animations or complex interactions.
 
-I’m also excited by the possibility of generating landing pages quickly using Astro templates and even ChatGPT to replicate layouts or image structures I like from other sites.
+## Looking Forward
 
-Final Thoughts
+I'm genuinely encouraged by what I've discovered so far with Astro. The framework's philosophy of shipping less JavaScript while maintaining modern development practices feels like the right direction for the web.
 
-This post is more of a “thinking out loud” than a tutorial, but if you’re exploring Astro or looking for a low-cost, high-speed setup for content sites or landing pages, I think you’re on the right path. I’m encouraged by how quickly things are coming together—and I’m just getting started.
+Stay tuned as I continue exploring this powerful framework and sharing what I learn along the way. If you're considering Astro for your next project, I'd say it's definitely worth the investment in learning time.
 
-Thanks for reading! More soon.
+---
+
+*What are your thoughts on Astro? Have you tried building with it? Let me know your experiences in the comments below.*
