--- a/src/pages/blog/posts/new.mdx
+++ b/src/pages/blog/posts/new.mdx
@@ -3,13 +3,10 @@ layout: "../../../layouts/Post.astro"
 title: "Building My First Astro Website: A Journey into Modern Web Development"
 description: "Exploring Astro's speed and simplicity while learning content management and deployment workflows"
 publishDate: "June 1, 2025"
-featuredImage: "public/assets/images/hero-waves.jpg"
+featuredImage: 'public/assets/images/hero-waves.jpg'
 excerpt: "Just launched a brand new website built with Astro and wanted to share my thoughts on this exciting web framework that prioritizes speed and simplicity over complex animations."
 tags: 
   - "Astro"
-  - "Web Development"
-  - "Content Management"
-  - "Performance"
 ---
 
 # Building My First Astro Website: A Journey into Modern Web Development
