Update Demo of GIT CMS.mdx

--- a/src/pages/blog/posts/Demo of GIT CMS.mdx
+++ b/src/pages/blog/posts/Demo of GIT CMS.mdx
@@ -1,16 +1,21 @@
 ---
 date: 2025-06-01T04:00:00.000Z
-title: Demo of GIT CMS
+title: 'Demo of GIT CMS'
 tag:
   - klaviyo
 ---
 
-This is super cool. 
+#This is super cool. 
 
 [https://gitcms.blog/](https://gitcms.blog/)
 
 I now just dried out this Git CMS which is a Chrome extension that helps me create content inside of my Astro page so I don't have to go out and build in a third-party CMS or put it on another hosting platform. It's completely self-contained so I have almost zero cost to run this. 
 
+##Headline 2
+
+###Headline 3
+
+####Headline 4 
 
 Now I just have to figure out better ways to organize the posts since that'll give me a chance to then create more information that will be helpful in my blog. 
 
